[package]
name = "av-layer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { workspace = true}
primitives = {workspace = true}
async-trait = { workspace = true }
jsonrpsee = { workspace = true }
anyhow = {workspace = true}
btree-slab = { workspace = true}
clap = { workspace = true, features = ["derive"] }
slab = { workspace = true }
parity-scale-codec = { workspace = true }
