[package]
name = "av-layer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio                                       = { workspace = true}
primitives                                  = { workspace = true}
async-trait                                 = { workspace = true}
jsonrpsee                                   = { workspace = true}
anyhow                                      = { workspace = true}
btree-slab                                  = { workspace = true}
clap                                        = { workspace = true, features = ["derive"]}
slab                                        = { workspace = true}
parity-scale-codec                          = { workspace = true}
sp-application-crypto                       = { workspace = true}
frame-support                               = { workspace = true}
serde                                       = { workspace = true}
futures                                     = { workspace = true}
sp-runtime                                  = { workspace = true, features = ["serde"]}
sp-core                                     = { workspace = true}
serde_json                                  = { workspace = true}
subxt                                       = { workspace = true}
tracing 									= { workspace = true}
sp-tracing 									= { workspace = true}
tracing-subscriber 							= { workspace = true}