[package]
authors.workspace = true
name = "integration-test"
version.workspace = true
edition.workspace = true
repository.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
av-layer                            = { workspace = true}
primitives                          = { workspace = true}
parity-scale-codec                  = { workspace = true}
sp-application-crypto               = { workspace = true}
jsonrpsee                           = { workspace = true}
tokio                               = { workspace = true}
anyhow                              = { workspace = true}
subxt                               = { workspace = true}
sp-core                             = { workspace = true}
sp-runtime                          = { workspace = true}
subxt-cli                           = { workspace = true}
subxt-signer                        = { workspace = true}
tracing 							= { workspace = true}
sp-tracing 							= { workspace = true}
tracing-subscriber 					= { workspace = true}
