[package]
name = "primitives"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
subxt = {workspace = true}
chrono = {workspace = true}
parity-scale-codec = { workspace = true }
anyhow = {workspace = true }
serde = { worskspace = true }
frame-support = { workspace = true }
sp-runtime = {workspace = true}
sp-core = { workspace = true}